--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -151,7 +151,7 @@ annex.49.t:0 "러시아의 미래"
 annex.49.d:0 "러시아 영토에 대한 협상이 끝나면서, 그들 스스로 나아갈 길을 계획해줘야 할 때입니다. 정부의 대부분은 루이스 페르디난드를 지지하는 것으로 통일되어있고, 윌헬름 2세의 차남은  키릴 로마노브의 딸과 결혼해 있습니다. 허나 몇몇 장관들은 친-독일 파벨 버몬트-아발로브가 러시아를 이끌어야 한다고 제안했습니다. 어떻게 해야 할까요?"
 annex.49.a:0 "루이스 페르디난드 왕자가 이반 7세로 즉위할 것이다"
 annex.49.b:0 "파벨 버몬트-아발로브를 임명시켜라"
-annex.50.t:0 "호엔촐레른가에서 차르를 뽑아라"
+annex.50.t:0 "호헨촐레른가에서 차르를 뽑아라"
 annex.50.d:0 "독일이 호헨촐레른가의 사람을 러시아의 왕좌에 앉혔고, 그는 동방정교회로 개종했지만, '이반 7'세가 러시아를 통치하기는 쉬워보이지 않습니다."
 annex.50.a:0 "대체 역사에는 더 끔찍한 일도 있는법이니까, 뭐."
 annex.51.t:0 "우리의 새로운 총리"
