--- a/Kaiserreich Korean Translation/localisation/KR_Galicia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Galicia_l_english.yml
@@ -3,7 +3,7 @@ l_english:
 ### Events ###
 gal.1.t:0 "갈리치아-로도메리아가 독립하다"
 gal.1.d:0 "1772년 제1차 폴란드-리투아니아 연방 분할로 시작된 합스부르크 통치 하에서 갈리치아-로도메리아는 자신을 독립적이라고 봅니다. 하지만 우리는 이웃 중견 국가들로 둘러 싸여 있는 약한 국가입니다. 어쩌면 요 근래에 우리 영토를 빼앗은 폴란드에게 보호를 청하는 것이 좋을지도 모릅니다."
-gal.1.a:0 "폴란드에 정식으로 가입할 것을 요청하자. (당신이 플레이어라면 이는 게임 오버를 의미한다.)"
+gal.1.a:0 "폴란드에 정식으로 가입할 것을 요청하자. (당신이 플레이어라면 이는 게임 오버를 의미합니다.)"
 gal.1.b:0 "갈리치아는 독립을 유지할 것이다."
 
 gal.2.t:0 "갈리치아가 우리 나라에 들어오려고 하다"
@@ -11,25 +11,25 @@ gal.2.d:0 "1772년 제1차 폴란드-리투아니아 연방 분할로 시작된 
 gal.2.a:0 "형제여, 집에 온 것을 환영한다."
 
 gal.3.t:0 "부코비나 요구"
-gal.3.d:0 "며칠 간의 독립 기간을 거친 후, 예전에 오스트리아 왕실의 속국이었던 갈리치아는 폴란드로 편입되었습니다. 하지만, 인종적으로 다양한 갈리치아의 최남단 지방인 부코비나는 많은 루마니아인들의 고향입니다. 현재 이 지역의 혼란을 감안하면, 우리는 상대적으로 신속하게 대처할 수 있을 것입니다."
-gal.3.a:0 "Let us free our brothers."
-gal.3.b:0 "Provoking the Poles is not wise."
+gal.3.d:0 "며칠 간의 독립 기간을 거친 후, 예전에 오스트리아 왕실의 속국이었던 갈리치아는 폴란드로 편입되었습니다. 하지만 갈리치아는 다양한 인종으로 이루어져 있으며, 갈리치아의 최남단 지방인 부코비나는 많은 루마니아인들의 고향입니다. 현재 이 지역의 혼란을 감안하면, 우리는 상대적으로 신속하게 대처할 수 있을 것입니다."
+gal.3.a:0 "우리 형제들을 자유롭게 하자."
+gal.3.b:0 "폴란드인들을 도발하는 것은 현명하지 않다."
 
 gal.4.t:0 "동부 갈리치아 요구"
-gal.4.d:0 "며칠 간의 독립 기간을 거친 후, 예전에 오스트리아 왕실의 속국이었던 갈리치아는 폴란드로 편입되었습니다. 하지만, 인종적으로 다양한 갈리치아의 동부는 많은 우크라니아인들의 고향입니다. 현재 이 지역의 혼란을 감안하면, 우리는 상대적으로 신속하게 대처할 수 있을 것입니다."
-gal.4.a:0 "Let us free our brothers."
-gal.4.b:0 "Provoking the Poles is not wise."
+gal.4.d:0 "며칠 간의 독립 기간을 거친 후, 예전에 오스트리아 왕실의 속국이었던 갈리치아는 폴란드로 편입되었습니다. 하지만 갈리치아는 다양한 인종으로 이루어져 있으며, 갈리치아의 동부는 많은 우크라니아인들의 고향입니다. 현재 이 지역의 혼란을 감안하면, 우리는 상대적으로 신속하게 대처할 수 있을 것입니다."
+gal.4.a:0 "우리 형제들을 자유롭게 하자."
+gal.4.b:0 "폴란드인들을 도발하는 것은 현명하지 않다."
 
-gal.5.t:0 "Romania has marched into the Bucovina"
-gal.5.d:0 "An incorporation of a territory as large as Galicia was never expected to go smoothly. However what wasn't expected was meddling from the outside - Romanian troops have marched into the largely Romanian-speaking territory Bucovina, claiming the state as their own. Officials of the former Galician government have urged us to intervene."
-gal.5.a:0 "This shall not stand. Retake what is ours!"
-gal.5.b:0 "Let the Romanians have what speaks Romanian."
+gal.5.t:0 "루마니아가 부코비나에 진입하다."
+gal.5.d:0 "갈리치아처럼 큰 영토가 편입되는 것은 결코 순조롭게 진행될 것이라고 기대되지 않았습니다. 그러나 외부로부터의 간섭은 예상치 못했습니다. 루마니아 군대가 루마니아어를 주로 사용하는 지역인 부코비나로 진입하고 그 지역을 자신들의 것이라고 주장했기 때문입니다. 과거 갈리시아 정부의 관계자들은 우리에게 개입할 것을 촉구했습니다."
+gal.5.a:0 "이는 용납할 수 없다. 원래 우리 것이었던 것을 다시 되찾자!"
+gal.5.b:0 "루마니아인이 루마니아어를 하도록 놔둬라."
 
-gal.6.t:0 "The Ukraine has seized Eastern Galicia"
-gal.6.d:0 "Kraków and Lwów are the most important cities of Galicia. The integration of the former has gone smoothly over the run of the last week, however the inhabitants of the mostly Ruthenian-speaking territories surrounding Lwow have, with aid of the Ukrainian military, seized the city. The city of Lwów is too important for Poland to just let it fall into the hands of another country."
-gal.6.a:0 "This shall not stand. Retake what is ours!"
-gal.6.b:0 "Ruthenians aren't Poles anyways."
+gal.6.t:0 "우크라이나가 동부 갈리치아를 점령하다."
+gal.6.d:0 "크라쿠프와 르부프는 갈리치아에서 가장 중요한 도시입니다. 크라쿠프의 통합은 지난 주 내내 순조롭게 진행되었지만, 르부프 주위에서 거주하고 대부분 루테니아어를 쓰는 주민들이 우크라이나 군의 도움을 받아 이 도시를 장악했습니다. 르부프 시는 다른 나라의 손에 넘어가기에는 폴란드에게 너무나도 중요한 도시입니다."
+gal.6.a:0 "이는 용납할 수 없다. 원래 우리 것이었던 것을 다시 되찾자!"
+gal.6.b:0 "어쨌든 루테니아인은 폴란드인이 아니다."
 
-gal.7.t:0 "Karl Albrecht Elected as King of Poland"
-gal.7.d:0 "The current Governor of Galicia-Lodomeria, Karl Albrecht von Habsburg, has just been elected as the new King of Poland after an intensely contested vote. Karl Albrecht is expected to leave the nation early tomorrow to take up his new position as leader of the Polish people, and has left Jozef Haller von Hallenburg in charge of Galicia in his absence."
-gal.7.a:0 "Wish him luck."
+gal.7.t:0 "카를 알브레히트가 폴란드의 왕으로 선출되다"
+gal.7.d:0 "현 갈리치아 지방의 총독인 카를 알브레히트 폰 합스부르크가 치열한 접전 끝에 폴란드의 새 왕으로 선출되었습니다. 카를 알브레히트는 내일 일찍 폴란드 사람들을 이끌기 위해 출국할 예정이며, 요제프 할러 폰 합스부르크에게 갈리치아를 맡겼습니다."
+gal.7.a:0 "행운을 빈다."
