--- a/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
@@ -9,13 +9,13 @@ afg.0.b:0 "인도가 뭘 가졌는데? 소?"
 afg.1.t:0 "라왈핀디 제3차 조약"
 afg.1.d:0 "대참사! 델리 정부에 대한 우리의 군사 작전은 엄청난 실패와 우리 군대가 공황 상태에서 도피한 카이베르의 고개를 통해 강타 되었습니다. 총-독인 Ganga Singh은 1926 년 이전 국경 복원을 요구하는 평화를 제안했다. 불행히도 우리는 우리 민족이 멸망하지 않도록 쇠퇴 할 수 없습니다..."
 afg.1.d.puppet:0 "대참사! 델리 정부에 대한 우리의 군사 작전은 엄청난 실패와 우리 군대가 공황 상태에서 도피한 카이베르의 고개를 통해 강타 되었습니다. 총독인 강가 싱은 1926 년 이전 국경의 복원과 우리 정부의 영구적인 굴복을 요구하는 평화를 제안했습니다. 불행히도 우리는 우리 민족이 멸망하지 않도록 쇠퇴 할 수 없습니다..."
-afg.1.a:0 "우리는 다른 선택이 없기 때문에 항복한다..."
+afg.1.a:0 "우리에게 항복 외에 다른 선택지는 없다..."
 
 afg.2.t:0 "라왈핀디 제3차 조약"
 afg.2.d:0 "승리는 우리 것입니다! 델리에있는 퇴폐적인 영국의 애완견들은 완전히 궤멸 되고, 우리 군대는 그들의 자본의 연기가 나는 유적에 뿌리를 내리고 있습니다. 이제는 양보를 요구하는 가장 좋은시기인 반면, 우리는 여전히 선두에서 이끌고 있습니다."
 afg.2.a:0 "우리는 카슈미르를 주장하고, 인더스의 입구로 가는 길을 개척해 나간다!"
 afg.2.b:0 "나는 인더스 계곡의 모든 모하메드 인들에 대한 해방자가 될 것이다!"
-afg.2.c:0 "우상 숭배자들과 평화는 없다. 정복을 완성한다!"
+afg.2.c:0 "우상 숭배자들과 평화는 없다. 계속 정복한다!"
 
 afg.3.t:0 "에미르의 요구"
 afg.3.d:0 "저주스러운! 아프간 개들은 우리를 완전히 압도하고 우리의 자만심을 굴욕에 빠뜨렸다. 이제 아프간 에미르는 카슈미르 왕국에 대한 우리의 항복과 인더스의 입구로의 접근을 요구합니다. 비록 이것들이 가혹한 조건이긴 하지만, 대륙에있는 라이벌들에게 노출된 상황에 따라서 행동하는 것이 현명 할 수 있습니다."
