--- a/Kaiserreich Korean Translation/localisation/KR_Siam_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Siam_l_english.yml
@@ -76,15 +76,15 @@ SIA_Communal_Farming_idea:0 "집단농장"
 SIA_Communal_Farming_idea_desc:0 "Maybe instead of letting the unemployed stay idle, we should send them back into the countryside, reducing our reliance on imports."
 SIA_Self_Sufficeincy_idea:0 "자급자족 경제"
 SIA_Self_Sufficeincy_idea_desc:0 "Sufficiency Economy is a philosophy based on the fundamental principles of Thai culture. It is a method of development based on moderation, prudence, and social immunity, one that uses knowledge and virtue as guidelines in living."
-SIA_Export_Rice_idea:0 "Export-Oriented Rice Production"
+SIA_Export_Rice_idea:0 "수출 지향적인 쌀 생산"
 SIA_Export_Rice_idea_desc:0 "Maybe the best way to cope with the disastrous economic situation right now is to export as much as we can."
-SIA_World_Granary_idea:0 "Granary of the World"
+SIA_World_Granary_idea:0 "세계의 곡창"
 SIA_World_Granary_idea_desc:0 "Siam has a strong tradition of rice production. It has the fifth-largest amount of land under rice cultivation in the world and is now the world's largest largest exporter of rice."
 SIA_Reformed_Judiciary:0 "법 제도 개혁"
 SIA_Reformed_Judiciary_desc:0 "Our laws are now modernised to fit in more with the present situation. Gone are the days of barbaric and draconian Ayutthayan-era laws."
-SIA_Centralized_Police_idea:0 "Centralised Police Command"
+SIA_Centralized_Police_idea:0 "경찰지휘부의 중앙화"
 SIA_Centralized_Police_idea_desc:0 "With the Royal Siamese Police command now being under direct control of the Prime Minister, more funding has been added to the organisation which makes it more effective."
-SIA_SDSI_idea:0 "SDSI"
+SIA_SDSI_idea:0 "시암 "
 SIA_SDSI_idea_desc:0 "Stands for \"Siam Department of Secret Intelligence\", they are now in charge of protecting our national interests both domestic and abroad."
 SIA_IndNat_Income:0 "Siamese Compensation Money"
 SIA_IndNat_Income_desc:0 "Premier Plaek Phibunsongkhram offer compensation money for their Industrailisation seizure of our assets in Siam"
@@ -164,7 +164,7 @@ SIA_SARIT_RULES:0 "Sarit Thanarat won the power struggle over Pak Seri Managkhas
 SIA_purge_tt:0 "This will throughoutly purged the officers who sympathized with the Rebellion - and will surely result in a huge loss of talented commanders.\n\n"
 SIA_amnesty_tt:0 "We'll grant amnesty to those who deemed salvagable or forced to act against us unvoluntarily during the rebellion - but this will surely result in some civil unrest.\n\n"
 SIA_police_centralized_desc:0 "This will lessen the risk of succesful seperatist rebellion against Siam/Thailand in-game.\n\n"
-SIA_PRAJADHIPOK_REFORM:0 "Prajadipok's Democratic Reform is Succesful"
+SIA_PRAJADHIPOK_REFORM:0 "프라차티뽁의 민주개혁이 성공을 거두다"
 SIA_not_finished:0 "§RThis branch is not finished yet, it will never unlock and can be ignored.§!"
 
 ### Parties Siam/Thailand ###
@@ -307,7 +307,7 @@ siam.15.t:0 "라마 8세의 사망" # Mahidol
 siam.15.d:0 "King Ananda Mahidol of the [SIA.GetName], also known as Rama VIII, the 8th monarch of the House of Chakri, was found shot dead in his bed. Although at first thought to have been an accident, his death was ruled a murder by medical examiners, and three royal pages were later executed following very irregular trials. The mysterious circumstances surrounding his death have been the subject of much controversy. The childless monarch will be succeeded by his brother Bhumibol Adulyadej, who took the regnal name Rama IX."
 siam.15.d.plaek:0 "Prince Ananda Mahidol of the [SIA.GetName], also known as Rama VIII, who would have been the 8th monarch of the House of Chakri, has died from severe blood loss resulting from a severed radial artery after he crashed his car. The childless prince will be succeeded by his brother Bhumibol Adulyadej, who took the regnal name Rama IX as the pretender to the throne of Siam."
 siam.15.d.rep:0 "Prince Ananda Mahidol of the [SIA.GetName], also known as Rama VIII, who would hae been the 8th monarch of the House of Chakri, has died from severe blood loss resulting from a severed radial artery after he crashed his car. The childless prince will be succeeded by his brother Bhumibol Adulyadej, who took the regnal name Rama IX as the pretender to the throne of Siam."
-siam.15.a:0 "May he rest in peace"
+siam.15.a:0 "고이 잠드소서"
 
 siam.33.t:0 "The death of Rama IX" # Boripatr
 siam.33.d:0 "King Parbatra Sukhumbhand of the [SIA.GetName], also known as Rama IX, the 9th monarch of the House of Chakri, suffered a heart attack while walking around his bedroom in the Grand Palace last night. The palace medical team arrived too late to resuscitate him. Died with no male heir, the monarch will be succeeded by his brother Chumbhotbongs Paribatra, who took the regnal name Rama X."
@@ -605,21 +605,21 @@ SIA_modernsiamesenation:0 "현대 시암 국가"
 SIA_khana_ratsadon:0 "인민당의 쿠데타"
 SIA_iron_marshal:0 "철의 장군"
 SIA_yuwachontaharn:0 "청년 의용대"
-SIA_nationalreserveact:0 "National Reserve Act"
+SIA_nationalreserveact:0 "국가 준비법"
 SIA_nationalizationofforeignindustries:0 "외국 공장 국유화"
-SIA_defensetechnologyinstitute:0 "Defence Technology Institute"
+SIA_defensetechnologyinstitute:0 "국방방위기술연구소"
 SIA_ratthaniyomdecrees:0 "국민문화 칙령"
 SIA_reapporachthemonarchy:0 "왕실과의 재접근"
 SIA_buddhisttraditions:0 "불교 전통"
 SIA_creationoftherepublic:0 "공화국으로의 전환"
 SIA_phaopoliceintegration:0 "경찰 지휘 통합"
-SIA_survivorofthecivilwar:0 "Lessons from the Civil War"
-SIA_prestigious_senate:0 "The Prestigious Senate"
-SIA_privycouncilreforms:0 "Privy Council Reforms"
-SIA_empowerthenobility:0 "Empower the Nobility"
+SIA_survivorofthecivilwar:0 "내전으로부터의 교훈"
+SIA_prestigious_senate:0 "권위있는 상원"
+SIA_privycouncilreforms:0 "추밀원 개혁"
+SIA_empowerthenobility:0 "귀족에게 권한을 주다"
 SIA_fathergovernschildren:0 "Father Governs Children"
 SIA_reconstruction:0 "Rising from the Ashes"
-SIA_amnesty:0 "Issuing Amnesties"
+SIA_amnesty:0 "사면문제"
 SIA_the_great_purge:0 "숙군 작업"
 SIA_military_royalty:0 "Ensuring Loyalty"
 SIA_people_assembly:0 "인민 회의"
@@ -670,52 +670,52 @@ SIA_juridicialreform:0 "법률 개혁"
 SIA_juridicialreform_desc:0 "While the archaic Ayutthayan era law was long gone by now, gaining back extraterritorial jurisdiction rights we lost to the Bowring treaty and other similar ones we make with the Europeans must be done to regain our prestige back. This will also make our juristic system become much more efficient than the current quagmire."
 SIA_centralizedpolicecommand:0 "경찰 지휘의 중앙화"
 SIA_centralizedpolicecommand_desc:0 "Since the Welkrieg our police command became paralyzed due to a mix of German, Italian and American higher staffs. By slowly replacing them with the Siamese graduates and merging the Metropolitan and Regional police command under a single office, they should now work at a greater efficiency than ever before."
-SIA_SDSI:0 "SDSI"
+SIA_SDSI:0 "시암 비밀정보국"
 SIA_SDSI_desc:0 "Siamese Department of Secret Intelligence (SDSI; also known as Samnag-ngarn Khao-khrong Haeng Chard Siam - SKCS) whose job was to keep an eye on both domestic and foreign intelligence, with maintainace of the country's stability as its goal."
 SIA_nationalcurriculumact:0 "국민 교육과정 법"
 SIA_nationalcurriculumact_desc:0 "While there're already some previous educational act enacted during Rama V and Rama VI era, we should now focus more on the quality aspect too by lengthen the year for primary education from 4 to 6 years and the compulsary education required by law to Grade 12. 'Harmful material' such as Syndicalist or Seperatist propaganda sill also be heaviluy monitored."
-SIA_regionaluniversities:0 "Creation of Regional Universities"
+SIA_regionaluniversities:0 "지방대학 설립"
 SIA_regionaluniversities_desc:0 "To support our progress, our foundation must be strong first. By funding the creation of regional universities in Chian Mai, Khonkaen and Hat Yai (Songkhla), higher education will be much more affordable for people who live faraway from Bangkok."
 SIA_kingmongkutinstitute:0 "King Mongkut's Institute of Technology"
 SIA_kingmongkutinstitute_desc:0 "Named after a Siamese king known for his scientific feats - this specialized research facility will surely increase our research capability."
 
 ### Economic Path ###
 SIA_intialeconomictsabilisation:0 "초기 경제 안정화"
-SIA_kickstartlocalbusiness:0 "Kickstart Local Business"
-SIA_bailoutsiamcement:0 "Bailout Siam Cement"
-SIA_chiangmaioil:0 "Chiang Mai Oil Discovery"
-SIA_thaioilcorp:0 "Thai Oil Corporation"
-SIA_foreignexploit:0 "Foreign Exploitation Contracts"
+SIA_kickstartlocalbusiness:0 "향토산업 자극"
+SIA_bailoutsiamcement:0 "시암 시멘트 긴급구제"
+SIA_chiangmaioil:0 "치앙마이 유정 탐사"
+SIA_thaioilcorp:0 "시암 정유기업"
+SIA_foreignexploit:0 "외국과의 개발계약"
 SIA_newpetrochemicalwing:0 "New Petrochemical Department"
 SIA_rayonrefineries:0 "Rayong Refineries"
-SIA_newconstructionmethod:0 "New Construction Method"
+SIA_newconstructionmethod:0 "새로운 시공법"
 SIA_newconstructionmethod_desc:0 "SIA_newconstructionmethod_desc"
 SIA_contractswithchaiseri:0 "Contracts with Chaiseri"
-SIA_rubberplantations:0 "Southern Rubber Plantations"
+SIA_rubberplantations:0 "남부의 고무 대농장"
 SIA_thairungcars:0 "Thairung's Siamese Cars"
-SIA_prototypetankdesign:0 "Prototype Tank Design"
-SIA_petrochemicaldepartment:0 "New Petrochemical Department"
+SIA_prototypetankdesign:0 "탱크 디자인 원형"
+SIA_petrochemicaldepartment:0 "새로운 석유화학 부서"
 SIA_sahaviriyasteeldeal:0 "Deal with Sahaviriya Steels"
-SIA_nakhonsiwolfram:0 "Nakhon Si Thammarat Tungsten Mines"
+SIA_nakhonsiwolfram:0 "나콘시탐마랏 텅스텐 광산"
 SIA_kanchanaburiironreservoir:0 "Exploit Kanchanaburi Iron Reservoir"
 SIA_expandloeimines:0 "Expand Loei Iron Mines"
 SIA_tigereconomy:0 "Tiger Club Economy"
 
 ### Agricultural Path ###
-SIA_agriculuralmechanisation:0 "Agricultural Mechanisation"
+SIA_agriculuralmechanisation:0 "농업의 기계화"
 SIA_agrarianscoop:0 "농업 협동 조합"
 SIA_communalapproach:0 "공동체적 접근"
 SIA_newfarmingtheory:0 "신 농업 이론"
 SIA_selfsufficiencyeconomics_desc:0 "SIA_selfsufficiencyeconomics_desc"
-SIA_selfsufficiencyeconomics:0 "Self-Sufficiency Economics"
-SIA_exportrice:0 "Export-Oriented Rice Production"
-SIA_ricesubsidyscheme:0 "Rice Subsidy Scheme"
-SIA_worldgranary:0 "Granary of the World"
+SIA_selfsufficiencyeconomics:0 "자급자족 경제"
+SIA_exportrice:0 "수출지향적인 쌀 생산"
+SIA_ricesubsidyscheme:0 "쌀 농업 보조금 제도"
+SIA_worldgranary:0 "세계의 곡창"
 
 ### Transportation Path ###
-SIA_nationalhighway:0 "National Highway Commission"
+SIA_nationalhighway:0 "국도위원회"
 SIA_nationalhighway_desc:0 "Expansion of Route 3 (Sukhumvit Road: Bangkok - Rayong) and Route 1 (Vachiravut Road: Bangkok - Lopburi) has been considered by the government for some time now - with the creation of National Highway Commission, perhaps things should've progressed much more smoothly."
-SIA_railwaygauge:0 "Standardisation of Railway Gauge"
+SIA_railwaygauge:0 "철도 궤간 규격화"
 SIA_isanrailway:0 "이산 지역 철도 확장"
 SIA_southernrailway:0 "남부 철도 확장"
 SIA_northernrailway:0 "북부 철도 확장"
@@ -742,9 +742,9 @@ SIA_militaryaffairs:0 "Military Affairs"
 SIA_jungletraining:0 "정글 전투장비"
 SIA_femalecorps:0 "Suranaree Corps"
 SIA_asymmetricalwarfare:0 "Asymmetrical Warfare"
-SIA_newstandardrifle:0 "New Standard Rifle"
+SIA_newstandardrifle:0 "신 소총 표준법"
 SIA_artilleryresearchdivision:0 "Artillery Research Division"
-SIA_salacheepphurchard:0 "For the Motherland!"
+SIA_salacheepphurchard:0 "조국을 위하여!"
 SIA_expandsupportcapaciy:0 "Expand Support Capacity"
 SIA_armyaffairs:0 "군 재조직화"
 SIA_flexiblechainofcommand:0 "Flexible Chain of Command"
@@ -762,13 +762,13 @@ SIA_royalsiamesenavy:0 "왕실 시암 해군"
 SIA_royalsiamesenavy_desc:0 "Established in 1887, the RSN boasted similar organisational structure of the United States as they're composed of both its Navy fleet and the Royal Siamese Marine Corps. It was also the second Asian nation to acquire submarines, following Japan."
 SIA_expandmarinescorps:0 "Expand Navikkayothin Corps"
 SIA_newflagship:0 "New Flagship"
-SIA_coastaldefenseships:0 "Coastal Defence Ships"
-SIA_riverpatolunit:0 "River Patrol Units"
+SIA_coastaldefenseships:0 "해안경비선"
+SIA_riverpatolunit:0 "하천 순찰 부대"
 SIA_destroyerfleet:0 "New Chonburi-Class Destroyers"
 SIA_subships:0 "S-ships Project"
 SIA_twooceannavy:0 "2대양 해군"
 SIA_expandsattahip:0 "Expand Sattahip"
-SIA_wolfpacks:0 "Convoy Hunting"
+SIA_wolfpacks:0 "호송선 사냥"
 SIA_alargefleet:0 "Fleet in Being"
 
 ### Air Forces Path ###
