--- a/Kaiserreich Korean Translation/localisation/KR_Volunteers_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Volunteers_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
- vol.1.t:0 "Help is here!"
- vol.1.d:0 "Our brothers in [From.GetName] have sent us men and guns to fight the infidels!"
- vol.1.a:0 "Thank you!"
- vol.2.t:0 "Supplies are here!"
- vol.2.d:0 "We have been received crates with equipment from [From.GetName], but there are no soldiers to be seen. Where are the reinforcements that we were promised?"
- vol.2.a:0 "Thank you!"
- vol.FRA.1.t:0 "[From.GetName] is asking us for assistance"
- vol.FRA.1.d:0 "Send help to our brothers in [From.GetName]"
- vol.FRA.1.a:0 "Send manpower AND equipment"
- vol.FRA.1.b:0 "Send equipment"
- vol.FRA.1.c:0 "Shame on us!"
+ vol.1.t:0 "이곳에 도와주러 왔다!"
+ vol.1.d:0 "우리 형제 [From.GetName]가 이교도들과 싸우기 위해 우리에게 사람과 총을 보냈습니다!"
+ vol.1.a:0 "고마워요!"
+ vol.2.t:0 "보급품들이 왔어요!"
+ vol.2.d:0 "우리는 [From.GetName]로부터 장비를 갖춘 나무 상자들을 받았지만, 군인들은 볼 수 없었습니다. 우리가 약속 받은 증원 부대는 어디에 있나요?"
+ vol.2.a:0 "고마워요!"
+ vol.FRA.1.t:0 "[From.GetName]이 우리에게 도움을 청하고 있다"
+ vol.FRA.1.d:0 "[From.GetName]에 있는 형제들에게 도움 보내기"
+ vol.FRA.1.a:0 "인력 및 장비 보내기"
+ vol.FRA.1.b:0 "장비 보내기"
+ vol.FRA.1.c:0 "우리에게 수치스럽군!"
