--- a/Kaiserreich Korean Translation/localisation/KR_Armenia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Armenia_l_english.yml
@@ -7,91 +7,91 @@ ARM_paternal_autocrat_party_long:0 "괴뢰정부"
 ARM_national_populist_party_long:0 "아르메니아 국민 정부"
 
 ###Events###
-arm.2.t:0 "The Claims of Armenian Archaeology"
-arm.2.d:0 "A heated debate has raged in Armenian academic circles recently, on the issue of the greatest extent of Armenian state and cultural influence. Armenian archaeologists have unearthed traces of art and implements of an Armenia character in Eastern Turkey, but others are claiming that Armenian culture spread much further. We can finance some more expeditions to clarify the issue, yet this might bring us trouble from the Ottoman authorities."
-arm.2.a:0 "Armenia should know it's heritage"
-arm.2.b:0 "We shouldn't risk conflict with the Empire"
+arm.2.t:0 "아르메니아 고고학적 주장"
+arm.2.d:0 "아르메니아의 국가와 문화적 영향력의 가장 큰 범위에 대한 이슈에 대해 최근 아르메니아의 학계에 열띤 논쟁이 일고 있습니다. 아르메니아의 고고학자들은 터키 동부 지역에서 아르메니아인 특징의 미술품과 도구들을 발견하였으나 다른 이들은 아르메니아의 문화가 훨씬 더 전파되었다고 주장하고 있습니다. 우리는 이 문제를 분명히 하기 위해 더 많은 탐사에 자금을 댈 수 있지만, 이것은 오스만 제국 당국과의 문제를 야기시킬지도 모릅니다."
+arm.2.a:0 "아르메니아는 그 유산에 대해 알아야 한다"
+arm.2.b:0 "우리는 제국과 충돌할 위험을 감수하지 말아야 한다"
 
-arm.3.t:0 "Archaeological findings"
-arm.3.d:0 "It turned out that during the ancient times our country was way bigger and more developed, then it was previously thought. Our archaeologists have found several long-forgotten sites of cultural and historical importance to our people, including old temples, libraries and monuments. it seems we were ignorant of our glorious past for way too long."
-arm.3.a:0 "This is a great day for Armenia"
+arm.3.t:0 "고고학적 발견"
+arm.3.d:0 "고대 시대에 우리 나라가 훨씬 더 크고 발전되어 있었다는 것이 밝혀졌고, 그것은 이전에 생각만되었던 것이었습니다. 고고학자들은 오래 전에 발견한 오래 된 사원, 도서관, 기념물들을 포함한 우리 민족에게 문화적,역사적으로 중요한 몇몇 장소를 발견했습니다. 우리는 너무 오랫동안 영광스러운 과거에 대해 무지한 듯 보였습니다."
+arm.3.a:0 "아르메니아를 위한 멋진 날입니다"
 
-arm.4.t:0 "Recent Developments in Armenian Archaeology"
-arm.4.d:0 "The Armenian Government has recently funded the production of a series of archaeological works claiming that the culture of Eastern Turkey has persistently been dominated by Armenian cultural and political influence. This might encourage more rebellious elements in Armenia to become more persistent."
-arm.4.b:0 "Archaeology?!? Stop wasting my valuable time!"
-arm.4.a:0 "Take care of this idiocy once and for all!"
+arm.4.t:0 "아르메니아 고고학에서의 최근 발전"
+arm.4.d:0 "아르메니아 정부는 최근 터키 동부의 문화는 아르메니아의 문화적, 정치적 영향력에 의해 지속적으로 지배되고 있다고 주장하는 일련의 고고학적 유물 생산에 자금을 지원했습니다. 이것은 아르메니아의 더 많은 반항적인 요소들이 더 지속적으로 되도록 고무할 수도 있습니다."
+arm.4.b:0 "고고학?!? 내 소중한 시간을 낭비하지 마!"
+arm.4.a:0 "이 바보 같은 짓을 이번 한번만 잘 처리해!"
 
-arm.5.t:0 "Ottoman reaction"
-arm.5.d:0 "The imperial authorities have arrested our archaeologists and burned their most precious findings! They are barbarians, how can civilised people behave like that? This has gone too far!"
-arm.5.a:0 "They will pay..."
+arm.5.t:0 "오스만 반응"
+arm.5.d:0 "제국 당국이 우리 고고학자들을 체포해서 그들의 가장 귀중한 발견들을 태워 버렸습니다! 그들은 야만인입니다, 어떻게 문명화된 사람들이 그렇게 행동할 수 있죠? 이건 너무 지나쳤습니다!"
+arm.5.a:0 "그들은 대가를 지불할 것이다..."
 
-arm.6.t:0 "Nationalist Agitation"
-arm.6.d:0 "The Armenian countryside has been a recent hot bed of Anti-Ottoman sentiment. The continuing nature of the Ottoman rule is being blamed for the agitation but some in the government are looking at the Apostolic church as the source."
-arm.6.a:0 "Send in more police."
+arm.6.t:0 "민족주의적 선동"
+arm.6.d:0 "아르메니아의 시골 지역은 최근 반 오스만 정서의 뜨거운 온상이었습니다. 소요 사태의 원인으로 오스만 제국의 계속되는 통치가 주요 원인으로 지목되고 있지만 정부의 몇몇 사람들은 사도 교회를 원인으로 보고 있습니다."
+arm.6.a:0 "경찰을 더 보내."
 
-arm.7.t:0 "Ban on Teaching"
-arm.7.d:0 "In an attempt to further the assimilation of the Armenian people into the Ottoman society the Armenian government has banned the teaching of Armenian written literature calling it biased and inaccurate. Only Ottoman authorised materials will be available for teaching and all unauthorised materials are to be turned over to the government."
-arm.7.a:0 "Make it law"
+arm.7.t:0 "교육 금제"
+arm.7.d:0 "아르메니아인들을 오스만 사회로 더 동화시키려는 시도에서 아르메니아 정부는 아르메니아인들이 쓴 문학 작품들이 편향되고 부정확하다고 말하는 것을 금지했습니다. 오직 오스만의 공인된 자재만 교육용으로 사용할 수 있게 될 것이며 모든 무단 자재는 정부에 이관될 것입니다."
+arm.7.a:0 "그것을 법으로 정하라"
 
-arm.8.t:0 "The Apostolic Church Protests the New Law"
-arm.8.d:0 "The Church has protested the creation of the new law as being a direct threat to its practice and traditions. They have criticised the creation of the new law and has refused to hand over any material in the church. The church's refusal to comply with the law is causing serious internal problems to our state. What shall we do ?"
-arm.8.a:0 "Ignore the protests"
-arm.8.b:0 "We should listen to the priests"
+arm.8.t:0 "사도 교회가 새로운 법을 제시하다"
+arm.8.d:0 "교회는 새로운 법의 제정이 관습과 전통에 직접적인 위협이 된다며 항의했습니다. 그들은 새로운 법의 제정을 비난해 왔고, 교회에서 어떤 자료도 넘기기를 거부해 왔습니다. 교회가 그 법을 따르기를 거부하는 것은 우리 주에 심각한 내부 문제를 야기하고 있습니다. 어떻게 할까요?"
+arm.8.a:0 "항의 무시"
+arm.8.b:0 "성직자들의 말을 들어야 해"
 
-arm.9.t:0 "Armenian Book Burning"
-arm.9.d:0 "Armenian Agitators have burned several Turkish books and have smashed several shops. The Ottoman delegation is upset at the current anti-Ottoman sentiment that is running through Armenia. They are demanding that we do something to safeguard ethic Turks."
-arm.9.a:0 "Arrest the priests and the agitators"
-arm.9.b:0 "Arrest only the agitators"
-arm.9.c:0 "We can not oppose national will"
+arm.9.t:0 "아르메니아 도서 소각"
+arm.9.d:0 "아르메니아 선동가들은 여러권의 터키 책을 불 태웠고 여러개의 상점들을 부수었습니다. 오스만 대표단은 아르메니아를 관통해 흐르고 있는 현재의 반 오스만 정서에 대해 분개하고 있습니다. 그들은 우리가 터키인들의 윤리 의식을 보호하기 위해 뭔가를 할 것을 요구하고 있습니다."
+arm.9.a:0 "성직자와 선동자를 체포하라"
+arm.9.b:0 "선동자만 체포하라"
+arm.9.c:0 "우리는 국민의 뜻에 반대할 수 없다"
 
-arm.10.t:0 "Agitators Arrested"
-arm.10.d:0 "With the agitators arrested Armenia as a whole seems to have calmed down for now but there is a seathing undercurrent of nationalism which could rise again at any point."
-arm.10.a:0 "Not a bad outcome"
+arm.10.t:0 "선동가 체포"
+arm.10.d:0 "선동가들을 아르메니아 전반적으로 체포하여 상황이 일단 진정된 듯 보이지만, 어느 시점에라도 다시 고조될 수 있는 민족주의의 형세가 관망하고 있습니다."
+arm.10.a:0 "나쁘지 않은 결과로군"
 
-arm.11.t:0 "Revolt In Armenia"
-arm.11.d:0 "The arrest of the priests has led to a full scale revolt in Armenia and the government is in panic. There seems no way to stop the revolt. We could request help from the Ottomans but this could increase the Ottoman influence on our country. However, if we don't ask for help the government will probably collapse."
-arm.11.a:0 "Ask for the Ottomans help"
-arm.11.b:0 "Government is forced to flee country"
+arm.11.t:0 "아르메니아 반란"
+arm.11.d:0 "성직자들의 체포는 아르메니아에서 전면적인 반란을 일으켰고 정부는 공황 상태에 빠졌습니다. 반란을 멈출 방법이 없어 보입니다. 우리는 오스만에게 도움을 요청할 수도 있지만 이것은 우리 나라에 대한 오스만 제국의 영향력을 증가시킬 수 있습니다. 하지만, 우리가 도움을 요청하지 않는다면, 정부는 아마도 붕괴할 것입니다."
+arm.11.a:0 "오스만에 도움을 요청하다"
+arm.11.b:0 "정부를 국외로 도피하라"
 
-arm.12.t:0 "Armenian Government Requests Assistance"
-arm.12.d:0 "The Armenians have arrested several of the people who were responsible for the unrest there. They have requested that we send in troops to put down the unrest that has arisen due to the arrests. The fear is that the country will once again be drawn into a long drawn out occupation and there is also the Russian question as the presence of Turkish troops in Armenia would no doubt cause friction."
-arm.12.a:0 "Send in the troops"
-arm.12.b:0 "Not worth the damage"
+arm.12.t:0 "아르메니아 정부 지원 요청"
+arm.12.d:0 "아르메니아인들은 이 소요 사태에 책임이 있는 몇몇 사람들을 체포했습니다. 그들은 체포로 인해 발생한 소요 사태를 진압하기 위해 군대를 파견해달라고 요구해 왔습니다. 우려로는 나라가 다시 한 번 긴 침체기에 끌려 가게 될 것이고 아르메니아에 터키 군대가 존재함으로 의심의 여지가 없이 마찰을 낳을 것이라는 러시아의 문제도 있습니다."
+arm.12.a:0 "군대를 파병해"
+arm.12.b:0 "손해를 볼 가치가 없다"
 
-arm.13.t:0 "Ottoman Troops Enter Armenia"
-arm.13.d:0 "The Ottomans have sent troops into Armenia to quell the unrest and they will shortly restore order in the country."
-arm.13.a:0 "Welcome!"
+arm.13.t:0 "오스만 군 아르메니아 진입"
+arm.13.d:0 "오스만은 소요 사태를 가라앉히기 위해 아르메니아에 군대를 파견했고 그들은 곧 그 나라의 질서를 회복시킬 것입니다."
+arm.13.a:0 "어서오시오!"
 
-arm.14.t:0 "Nationalist Armenian Government"
-arm.14.d:0 "From the ashes of the old Armenian government, a new glorious Armenian government has risen. No longer will the Armenian people suffer under the yoke of the Ottoman Empire."
-arm.14.a:0 "A new day for Armenia"
+arm.14.t:0 "민족주의적 아르메니아 정부"
+arm.14.d:0 "아르메니아의 구 정부의 잿더미에서, 새로운 영광스러운 아르메니아 정부가 부상했습니다. 아르메니아인들은 더 이상 오스만 제국의 지배 하에서 고통 받지 않을 것입니다."
+arm.14.a:0 "아르메니아를 위한 새로운 날이로군"
 
-arm.15.t:0 "Armenia declares independence!"
-arm.15.d:0 "For many years, we have ruled over Armenia. But today, our threats of war have pushed Armenia beyond any reason, as they have decided to break free from our sphere of influence, inciting riots in the eastern parts of our empire inhabited by Armenian minorities in the process. How should we react to this mess?"
-arm.15.a:0 "Let them go"
-arm.15.b:0 "Blasphemy! Crush this upstart!"
+arm.15.t:0 "아르메니아가 독립을 선언하다!"
+arm.15.d:0 "수년 간, 우리는 아르메니아를 통치해 왔습니다. 하지만 오늘날, 우리의 전쟁 위협은 아르메니아를 그 어떤 이유보다도 더 밀어붙이고 있습니다. 그들은 그 과정에서 아르메니아 소수 민족들이 거주하는 우리 제국 동부의 폭동을 유발하며 우리의 영향권에서 벗어나기로 결정했기 때문입니다. 이런 엉망인 상황에 우리는 어떻게 대처해야 할까요?"
+arm.15.a:0 "그들을 풀어줘"
+arm.15.b:0 "신성 모독이다! 저 신생국을 박살내라!"
 
-arm.16.t:0 "Fate of Armenia"
-arm.16.d:0 "Our glorious armed forces have once again successfully seized entire Armenia. Only question that remains is what should be done with territory of Armenia. While armed forces and nationalist politicians argue for immediate integration of Armenia, liberal factions in our society are arguing for independent Armenia."
-arm.16.a:0 "Liberate Armenia!"
-arm.16.b:0 "Directly integrate Armenia!"
+arm.16.t:0 "아르메니아의 운명"
+arm.16.d:0 "우리의 영광스러운 군대가 다시 한번 아르메니아 전체를 성공적으로 장악했습니다. 남아 있는 유일한 문제는 아르메니아의 영토에 대해 무엇을 해야 하는가 하는 것입니다. 군대와 민족주의 정치인들이 아르메니아의 즉각적인 통합을 주장하는 반면, 우리 사회의 자유주의적 당파들은 아르메니아의 독립을 주장하고 있습니다."
+arm.16.a:0 "아르메니아를 해방하라!"
+arm.16.b:0 "아르메니아를 통합하라!"
 
-arm.17.t:0 "The Armenians Have Refused to Arrest the Agitators"
-arm.17.d:0 "The foolish Armenians have refused to arrest the agitators that have shown disrespect to the Ottoman Empire. We must make a statement about this."
-arm.17.a:0 "Lodge a protest and hope they comply"
-arm.17.b:0 "Threaten them with war!"
+arm.17.t:0 "아르메니아인들은 선동가들을 체포하기를 거부했다"
+arm.17.d:0 "어리석은 아르메니아인들은 오스만 제국에 대한 무시를 보여 준 선동가들을 체포하는 것을 거부했습니다. 우리는 이것에 관해 성명을 발표해야합니다."
+arm.17.a:0 "항의하고 그들이 따르기를 희망한다"
+arm.17.b:0 "전쟁으로 그들을 위협하라!"
 
-arm.18.t:0 "The Ottomans Lodge a Protest"
-arm.18.d:0 "The Ottomans have formally protested our unwillingness to arrest the agitators. This protest could lead to larger problems with Turkey but if we do go ahead with the arrests it could lead to further unrest."
-arm.18.a:0 "Ignore the protest"
-arm.18.b:0 "Cave in to the Turks"
+arm.18.t:0 "오스만의 항의"
+arm.18.d:0 "오스만은 우리가 그 선동가들을 체포하기 꺼려 한다며 공식적으로 항의했습니다. 이 시위는 터키에 더 큰 문제를 야기할 수 있지만, 만약 우리가 체포를 진행한다면 더 많은 불안감을 야기할 수 있습니다."
+arm.18.a:0 "항의 무시"
+arm.18.b:0 "터키에 굴복한다"
 
-arm.19.t:0 "The Armenians have ignored our complaints"
-arm.19.d:0 "The foolish Armenians have refused to preperly address our complaints against a wave of nationalism rising in Armenia. We must make a statement about this."
-arm.19.a:0 "Let it slide..."
-arm.19.b:0 "Threaten them with war!"
+arm.19.t:0 "아르메니아인들은 우리의 항의를 무시했다"
+arm.19.d:0 "어리석은 아르메니아인들은 아르메니아에서 고조되고 있는 민족주의 물결에 대한 우리의 불만을 능숙하게 처리하는 것을 거부해 왔습니다. 우리는 이것에 관해 성명을 발표해야합니다."
+arm.19.a:0 "그냥 내버려 둬..."
+arm.19.b:0 "전쟁으로 그들을 위협하라!"
 
-arm.20.t:0 "Ottomans Threaten War"
-arm.20.d:0 "The Ottomans have threatened war over the refusal to arrest the agitators. This would be a disaster for Armenia if it happened but if we do back down there will probably be a lot of unrest all over Armenia."
-arm.20.a:0 "Cave to the Turks demands"
-arm.20.b:0 "We will not bow to their demands"
+arm.20.t:0 "오스만의 전쟁 위협"
+arm.20.d:0 "오스만 제국은 선동가들을 체포하는 것을 거절하는 것에 대해 전쟁으로 위협했습니다. 만약 그 일이 일어난다면 이것은 아르메니아에 재앙이 될 것이지만 만약 우리가 후퇴한다면 아르메니아 전역에 걸쳐 많은 소요 사태가 생길 수 있을 것입니다."
+arm.20.a:0 "터키에 굴복하여 요구를 수용한다"
+arm.20.b:0 "그들의 요구에 복종하지 않을 것이다"
