--- a/Kaiserreich Korean Translation/localisation/KR_Siam_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Siam_l_english.yml
@@ -84,16 +84,16 @@ SIA_Reformed_Judiciary:0 "법 제도 개혁"
 SIA_Reformed_Judiciary_desc:0 "Our laws are now modernised to fit in more with the present situation. Gone are the days of barbaric and draconian Ayutthayan-era laws."
 SIA_Centralized_Police_idea:0 "경찰지휘부의 중앙화"
 SIA_Centralized_Police_idea_desc:0 "With the Royal Siamese Police command now being under direct control of the Prime Minister, more funding has been added to the organisation which makes it more effective."
-SIA_SDSI_idea:0 "시암 "
+SIA_SDSI_idea:0 "시암 비밀정보국"
 SIA_SDSI_idea_desc:0 "Stands for \"Siam Department of Secret Intelligence\", they are now in charge of protecting our national interests both domestic and abroad."
-SIA_IndNat_Income:0 "Siamese Compensation Money"
+SIA_IndNat_Income:0 "시암의 변상금"
 SIA_IndNat_Income_desc:0 "Premier Plaek Phibunsongkhram offer compensation money for their Industrailisation seizure of our assets in Siam"
 SIA_SocDem_1:0 "사회 민주주의 개혁"
 SIA_SocDem_2:0 "사회 민주주의 개혁"
 SIA_SocDem_3:0 "사회 민주주의 개혁"
-SIA_SocCon_1:0 "Prachathipat Reforms"
-SIA_SocCon_2:0 "Prachathipat Reforms"
-SIA_SocCon_3:0 "Prachathipat Reforms"
+SIA_SocCon_1:0 "쁘라차티팟 개혁"
+SIA_SocCon_2:0 "쁘라차티팟 개혁"
+SIA_SocCon_3:0 "쁘라차티팟 개혁"
 SIA_Liberal_1:0 "Kijsangkhom Reforms"
 SIA_Liberal_2:0 "Kijsangkhom Reforms"
 SIA_Liberal_3:0 "Kijsangkhom Reforms"
@@ -387,8 +387,8 @@ siamn.14.b:0 "그는 빨갱이다. 체포하라!"
 
 siamn.15.t:0 "피분송크람의 딜레마"
 siamn.15.d:0 "A political crisis is ongoing and nearly reached the boiling point now, we must do something!"
-siamn.15.a:0 "It's treason then! (Side with the Parliamentarians)"
-siamn.15.b:0 "HM's Dignity must be uphold! (Side with the Royalist)"
+siamn.15.a:0 "그것은 반역이다! (국회의원측에 합류)"
+siamn.15.b:0 "국왕의 품격은 반드시 지켜져야한다! (왕정주의자측에 합류)"
 siamn.15.c:0 "두 파벌들을 멈추고 중재인으로 들어서게 한다."
 
 siamn.16.t:0 "시암 내전의 서막"
@@ -406,7 +406,7 @@ siamn.17.b:0 "Surrender (to Parliamentarians)"
 
 siamn.18.t:0 "Bangkok reclaimed"
 siamn.18.d:0 "The [SIA.GetAdjective] Civil War had taken an unexpected turn as our side reclaimed Bangkok. Perhaps the government will be able to think straigh and prioritise our nation's safety better than their own interest and surrender?"
-siamn.18.a:0 "Issue them an Ultimatum"
+siamn.18.a:0 "그들에게 최후통첩을 보내자"
 siamn.18.b:0 "We'll never negotiate with them!"
 
 siamn.19.t:0 "Government reply"
@@ -478,7 +478,7 @@ siamn.31.a:0 "제기랄!"
 
 ## Siamese- Burmese War (NatPop) ##
 
-siamn.32.t:0 "Burmese agitators captured"
+siamn.32.t:0 "버마인 선동가 체포"
 siamn.32.d:0 "11 Burmese agitators in Morlamaeng are caught today while speading 'Liberation from the [SIA.GetAdjective] yoke' pamphets in Morlamaeng, one of the Mon-majority city near the Salween river delta. Perhaps we can utilized this chance to rally up our population under our regime and finished off Burmese threat once and for all!"
 siamn.32.a:0 "Who said I'm a coward again?"
 siamn.32.b:0 "Perfect chance to teach them who's the boss!"
