--- a/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
@@ -6,7 +6,7 @@ TARIFF_INCR:0 "관세 증가"
 big_ears_donation:0 "귀밝이 기부"
 CRIMINAL_NET_BRK_UP:0 "범죄 세력 일소"
 ECO_PROBLEMS:0 "경제난"
-PROFF_LEG_CITIES:0 "공사관 도시의 이윤"
+PROFF_LEG_CITIES:0 "공사관 도시에서의 소득"
 INVEST_SEIZED_YOU:0 "공사관 도시 투자 점유"
 INVEST_SEIZED_YOU_COMP:0 "공사관 도시 투자 점유"
 INVEST_SEIZED:0 "공사관 도시 투자 점유"
