--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
@@ -51,32 +51,32 @@ rusd.8.a:0 "그들의 요구를 들어줘라."
 rusd.8.b:0 "그들의 요구를 무시해라."
 rusd.8.c:0 "군대를 보내 그들을 진정시켜라!"
 
-rusd.9.t:0 "Negotiating with the Strikers"
-rusd.9.d:0 "An attempt to negotiate with the striking workers has been made. All political forces in the country closely watch the meeting, and some are hoping that the strike will become an impulse for further reforms in Russia."
+rusd.9.t:0 "파업 노동자들과의 협상"
+rusd.9.d:0 "파업중인 노동자들과의 협상시도가 있었습니다. 이 나라의 정치세력들은 모두 이 협상을 예의주시하고 있으며, 그들 중 일부는 이 파업이 러시아의 추가적인 개혁에 대한 촉진제가 되기를 희망하고있습니다."
 rusd.9.a:0 "Stall the negotiations."
-rusd.9.b:0 "Reach an agreement, but keep the reforms to a minimum."
-rusd.9.c:0 "Reach a thorough agreement."
+rusd.9.b:0 "합의에 도달하되 개혁을 최소화해라"
+rusd.9.c:0 "합의를 보라."
 
-rusd.10.t:0 "Harsh Measures"
-rusd.10.d:0 "The commander of a local army garrison has proposed that we use brute force in order to disperse the strikers and force them to go back to work."
-rusd.10.a:0 "Why not? It's quicker than those negotiations!"
-rusd.10.b:0 "No, we must not be too harsh."
+rusd.10.t:0 "가혹한 조치"
+rusd.10.d:0 "지역 방위군 사령관이 파업 노동자들을 해산시키고 다시 일터로 보내기 위해 폭력적인 방법을 쓸것을 우리에게 제안했습니다."
+rusd.10.a:0 "좋은데? 협상보다 빠른 방법이잖아!"
+rusd.10.b:0 "아니, 너무 가혹해져서는 안돼."
 
-rusd.11.t:0 "The Strikers give up!"
-rusd.11.d:0 "The slow war of attrition between us and the strikers has been won by the government. The workers, seeing little success in their efforts, are about to call off the strike."
-rusd.11.a:0 "Splendid!"
+rusd.11.t:0 "파업을 포기하다!"
+rusd.11.d:0 "정부가 승리함으로써 파업 노동자들과의 오랜 전쟁이 끝났습니다. 들인 노력에 비해 턱없이 부족한 성과만을 거둔 노동자들은 이제 파업을 끝낼 참입니다."
+rusd.11.a:0 "완벽해!"
 
-rusd.12.t:0 "The Factory returns to Work"
-rusd.12.d:0 "With the crisis resolved, the factories may return to their previous efficiency."
-rusd.12.a:0 "Excellent!"
+rusd.12.t:0 "공장이 다시 가동돼다"
+rusd.12.d:0 "위기가 해결되면서, 공장들의 효율성이 회복되었습니다."
+rusd.12.a:0 "좋았어!"
 
-rusd.13.t:0 "General Strike"
-rusd.13.d:0 "Workers organisations all over the Russia have reached an agreement and decided to call for a general strike. Even though the response to their initiative has been rather limited so far, it is very possible that more and more workers will join the strike, should the situation continue to deteriorate."
-rusd.13.a:0 "Damned Socialists!"
+rusd.13.t:0 "총파업"
+rusd.13.d:0 "러시아의 모든 노동 단체들이 총파업을 위해 결집했습니다. 지금까진 그들의 발의에 대한 반응이 회의적이지만, 상황이 악화된다면 점점 더 많은 노동자들이 파업에 참여할 가능성이 있습니다."
+rusd.13.a:0 "망할 사회주의자들!"
 
-rusd.14.t:0 "General Strike expands"
-rusd.14.d:0 "Workers from other factories have joined the general strike. The situation is on the brink of eruption."
-rusd.14.a:0 "We must be prepared for the worst!"
+rusd.14.t:0 "총파업이 확대되다"
+rusd.14.d:0 "다른 공장의 노동자들이 파업에 참가하고 있습니다. 사태가 최악으로 치닫고 있습니다."
+rusd.14.a:0 "우리는 최악에 대비해야 한다!"
 
 rusd.15.t:0 "Clashes with the Workers"
 rusd.15.d:0 "Workers from other factories have joined the general strike. The situation is on the brink of eruption."
