--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -2,15 +2,15 @@ l_english:
 
 ### Focuses - Army ###
 TEX_second_revolution:0 "2차 미국 혁명"
-TEX_second_revolution_desc:0 "The Second American Revolution is now upon us. Like the founding fathers before us, it is time to strike for freedom and democracy. America shall be reborn under a new generation of founding fathers."
-TEX_civil_war_tooltip:0 "내전이 시작됩니다..."
-TEX_military:0 "우리의 육군을 만들자"
-TEX_military_desc:0 "With the civil war upon us we need to build a new army that can lead America to her true glory and greatness."
-TEX_army:0 "애국적인 미국 군대"
-TEX_army_desc:0 "With the civil war upon us we need a Patriotic American Army. One that will follow the true values of what it means to be an American and not the fat cats or the anarchists."
-TEX_pattons_mobility_plan_desc:0 "Of the various plans for the military, let us support General Patton's mobility plan. This is a plan that focus heavily on tanks and mechanised infantry."
+TEX_second_revolution_desc:0 "제2차 미국 혁명이 이제 우리 코앞에 있습니다. 옛 건국의 아버지들처럼, 이제 자유와 민주주의를 위해 투쟁할 때입니다. 미국은 새로운 건국의 아버지들의 새로운 세대 밑에서 다시 태어날 것입니다."
+TEX_civil_war_tooltip:0 "내전이 시작되었다..."
+TEX_military:0 "군대를 창설하다"
+TEX_military_desc:0 "우리에게 다가온 내전으로 인해 우리는 미국을 진정한 영광과 위대함으로 이끌 수 있는 새로운 군대를 만들 필요가 있습니다."
+TEX_army:0 "헌신적인 미군"
+TEX_army_desc:0 "우리에게 다가온 내전에서 우리는 헌신적인 군대가 필요합니다. 우리 군은 배부른 자본가나 무정부주의자가 아닌 '미국인'이 된다는 것의 진정한 가치를 따를 것입니다."
+TEX_pattons_mobility_plan_desc:0 "군을 위한 다양한 계획들 중에서, 패튼 장군의 기동전 계획을 지원합시다. 이것은 기갑 및 기계화 보병 전력에 주력하는 계획입니다."
 TEX_motorized_effort:0 "차량화 개발"
-TEX_motorized_effort_desc:0 "A key part of Patton's plan is motorised vehicles. By working closely with Henry Ford and other automotive leaders loyal to the true America, we can build the vehicles necessary to achieve victory."
+TEX_motorized_effort_desc:0 "패튼의 계획의 핵심적인 부분은 기계화 차량들입니다. 헨리 포드로 대표되는, '정통 미국'에 충성하는 자동차 제조사의 리더들과 긴밀하게 협력함으로써, 우리는 승리에 필요한 차량들을 생산할 수 있습니다."
 TEX_infantry_tanks:0 "보병 전차"
 TEX_infantry_tanks_desc:0 "For tanks to be effective they must work together with the infantry. The infantry must support our armoured cavalry for victory to be achieved. Through this team work we victory will always be ours."
 TEX_superior_fire_power:0 "콜린스의 제병합동 계획"
