--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -4,16 +4,17 @@ l_english:
 TEX_second_revolution:0 "2차 미국 혁명"
 TEX_second_revolution_desc:0 "제2차 미국 혁명이 이제 우리 코앞에 있습니다. 옛 건국의 아버지들처럼, 이제 자유와 민주주의를 위해 투쟁할 때입니다. 미국은 새로운 건국의 아버지들의 새로운 세대 밑에서 다시 태어날 것입니다."
 TEX_civil_war_tooltip:0 "내전이 시작되었다..."
-TEX_military:0 "군대를 창설하다"
-TEX_military_desc:0 "우리에게 다가온 내전으로 인해 우리는 미국을 진정한 영광과 위대함으로 이끌 수 있는 새로운 군대를 만들 필요가 있습니다."
-TEX_army:0 "헌신적인 미군"
-TEX_army_desc:0 "우리에게 다가온 내전에서 우리는 헌신적인 군대가 필요합니다. 우리 군은 배부른 자본가나 무정부주의자가 아닌 '미국인'이 된다는 것의 진정한 가치를 따를 것입니다."
-TEX_pattons_mobility_plan_desc:0 "군을 위한 다양한 계획들 중에서, 패튼 장군의 기동전 계획을 지원합시다. 이것은 기갑 및 기계화 보병 전력에 주력하는 계획입니다."
+TEX_military:0 "우리의 육군을 만들자"
+TEX_military_desc:0 "우리에게 다가온 내전으로 인해 우리는 미국을 진정한 영광과 위대함으로 이끌 수 있는 새로운 육군을 창설할 필요가 있습니다."
+TEX_army:0 "헌신적인 미 육군"
+TEX_army_desc:0 "우리에게 다가온 내전에서 우리는 헌신적인 육군이 필요합니다. 우리 육군은 배부른 자본가나 무정부주의자가 아닌 '미국인'이 된다는 것의 진정한 가치를 따를 것입니다."
+TEX_pattons_mobility_plan:0 "패튼의 기동전"
+TEX_pattons_mobility_plan_desc:0 "육군을 위한 다양한 계획들 중에서, 패튼 장군의 기동전 계획을 지원합시다. 이것은 기갑 및 기계화 보병 전력에 주력하는 계획입니다."
 TEX_motorized_effort:0 "차량화 개발"
 TEX_motorized_effort_desc:0 "패튼의 계획의 핵심적인 부분은 기계화 차량들입니다. 헨리 포드로 대표되는, '정통 미국'에 충성하는 자동차 제조사의 리더들과 긴밀하게 협력함으로써, 우리는 승리에 필요한 차량들을 생산할 수 있습니다."
 TEX_infantry_tanks:0 "보병 전차"
 TEX_infantry_tanks_desc:0 "For tanks to be effective they must work together with the infantry. The infantry must support our armoured cavalry for victory to be achieved. Through this team work we victory will always be ours."
-TEX_superior_fire_power:0 "콜린스의 제병합동 계획"
+TEX_superior_fire_power:0 "콜린스의 제병 합동"
 TEX_superior_fire_power_desc:0 "Joseph Lawton Collins better known as Lighting Joe has proposed that the key to victory in battle is to rely on combined arms and superior firepower. His plan holds merit, let us give him the support to achieve victory."
 TEX_praise_the_lord:0 "신을 찬양하고"
 TEX_praise_the_lord_desc:0 "To make sure that the combined arms plans works we need to make sure that we have the best weapons available. Our soldiers need the best that we can provide."
@@ -30,49 +31,49 @@ TEX_navy:0 "우리의 해군을 만들자"
 TEX_navy_desc:0 "It is time that we modernise the American Navy. In the past there was the Great White Fleet launched by Theodore Roosevelt that made the world recognise and respect America's naval might. Those days are in the past, however they do not need to be. Let us rebuild the navy and make the world respect the American might again."
 TEX_battle_ships:0 "우드워드의 전함"
 TEX_battle_ships_desc:0 "Clark H. Woodward's plan for the navy focuses on Battleships. To rule the seas we need modern battleships and battlecruisers and then victory will always be in our grasp."
-TEX_battle_cruisers:0 "전투순양함 개발"
+TEX_battle_cruisers:0 "순양전함 개발"
 TEX_battle_cruisers_desc:0 "As part of Woodward's plan for the navy, we need not just battleships but battlecruisers. To that end let us get to work in researching and building the battlecruisers needed to make the American the pride of the world."
 TEX_new_battle_ships:0 "새로운 전함"
 TEX_new_battle_ships_desc:0 "To make sure that the American navy remains the envy of the world we must not languish and neglect new ways to make our Battleships better in all regards. To that end let us focus on keeping our navy up to date."
 TEX_carriers:0 "맥케인의 항공모함"
 TEX_carriers_desc:0 "John S. McCain Sr.'s plan for the navy focuses on Aircraft Carriers. To rule the seas we need to focus on the power of aircraft carriers and then victory will always be in our grasp."
-TEX_carrier_planes:0 "Build Carrier Planes"
+TEX_carrier_planes:0 "함재기 제작"
 TEX_carrier_planes_desc:0 "Aircraft carriers are only as good as the planes that they are carrying. To that end let us make sure that our aircraft carriers have the best planes and that they never run out of them."
-TEX_new_aircraft_carriers:0 "New Aircraft Carriers"
+TEX_new_aircraft_carriers:0 "새로운 항공모함"
 TEX_new_aircraft_carriers_desc:0 "To make sure that the American navy remains the envy of the world we must not languish and neglect new ways to make our Aircraft Carriers better in all regards. To that end let us focus on keeping our navy up to date."
-TEX_escorts:0 "Naval Escorts"
+TEX_escorts:0 "해군 호위"
 TEX_escorts_desc:0 "Regardless of which naval plan that we choose we should make sure that our convoys are protected where ever they go. To that end let us invest in escorts for them."
 TEX_submarine_tactics:0 "잠수함 전술"
 TEX_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernise the American Navy we should not neglect this advantage. So to that end let us focus on the power of Submarines."
-TEX_anti_submarine_tactics:0 "대잠수함 전술"
+TEX_anti_submarine_tactics:0 "대잠 전술"
 TEX_anti_submarine_tactics_desc:0 "During the first world war, submarines were shown to be greatly effective. As we work on modernise the American Navy we should not neglect to be prepared for their usage. Let us focus on having our navy fight and destroy all submarines that the enemy may use."
-TEX_expand_annapolis:0 "Naval Station Key West"
+TEX_expand_annapolis:0 "키웨스트 해군 기지"
 TEX_expand_annapolis_desc:0 "While Annapolis may have served the corrupt regime before us, we should build a new naval base in Key West Florida. Here we will have access to the Caribbean and the Atlantic Ocean to train our navy and make sure that the American navy is the envy of the world."
-TEX_marine_corps:0 "Marine Corps"
+TEX_marine_corps:0 "해병대"
 TEX_marine_corps_desc:0 "As we work on modernise the military forces we must not neglect the Marine Corps. As one of the most elite branches of the American Armed forces, there are still many patriotic marines whom would glady help make sure that the corps is loyal to the true republic."
 
 ### Focuses - Air Force ###
-TEX_airforce:0 "애국적인 미국 공군"
+TEX_airforce:0 "헌신적인 미 공군"
 TEX_airforce_desc:0 "As we go to war to fight for America, we will need to build up the Air force that has patriotism in their hearts and loyalty to the Long and the true America."
-TEX_air_support:0 "레이미의 공군 지원"
+TEX_air_support:0 "레이미의 항공 지원"
 TEX_air_support_desc:0 "Howard Knox Ramey believes that the best use for the Air Force is to work with the Army. By having the army and the air force work together, victory will be ours."
 TEX_cas_effort:0 "근접 항공 지원"
 TEX_cas_effort_desc:0 "One of the key focuses for Ramey's plan is to focus on Close Air Support. We need aircraft that can focus on getting close to the enemy and providing tactical assistance to our troops."
 TEX_tatical_bombers:0 "전술폭격기들"
 TEX_tatical_bombers_desc:0 "Another key part of Ramey's plan calls for tactical bombers. By having our bombers destroy the enemy troops we will help ensure that victory is ours. So let us focus on improving our tactical bombers."
-TEX_air_supremecy:0 "린드버그의 항공우세"
+TEX_air_supremecy:0 "린드버그의 항공 우세"
 TEX_air_supremecy_desc:0 "Charles Lindbergh believes that the best use for the Air Force is to dominate the skies. Through ruling the skies we will have victory."
 TEX_fighters:0 "전투기 중점"
 TEX_fighters_desc:0 "To dominate the skies we need fighters and many of the highest qualities fighters that we can produce. To that end let us modernise the air force to make sure that our air force is the envy of the world."
-TEX_strategic_bombers:0 "전략폭격기들"
+TEX_strategic_bombers:0 "전략 폭격기"
 TEX_strategic_bombers_desc:0 "To rule the skies we need to make sure that the enemy can not even take flight to begin with. To that end Lindbergh's plan calls for a focus in strategic bombers in order to achieve just that objective."
 TEX_found_the_wasp:0 "WASP 창설"
 TEX_found_the_wasp_desc:0 "It has been proposed that we create the Women Airforce Service Pilots or the WASPs. The organisation would help in making sure that we have more men for flying and give women whom are loyal and patriotic to the True America flying experience. This is of course Controversial but we need all the support to bring victory for America."
-TEX_rocketry:0 "애국적인 로켓들"
+TEX_rocketry:0 "애국적인 로켓"
 TEX_rocketry_desc:0 "As we modernise our Air Force many of our scientists are looking into how rocketry and jet technology can be utilised in making our aircraft even better. Let us give them support and see what they can do for America."
 
 ### Focuses - Economic ###
-TEX_war_economy:0 "Economics of War"
+TEX_war_economy:0 "전시 경제"
 TEX_war_economy_desc:0 "The civil war is upon us and in order to have victory we need not just the might of our army but the might of our economy. So let us get to work to bring victory for the True America!"
 TEX_populist_economics:0 "Populist Economics"
 TEX_populist_economics_desc:0 "Huey Long is a populist and as such his economic model favours being a populist. His economic system favours supporting the people of America over the corporations and making sure that they have relief and support to bring victory for America."
